--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -1,4 +1,46 @@
 .footer {
     width: 100%;
-    height: 300px;
+    height: 270px;
 }
+
+@media all and (max-width: 760px) {
+    .footer {
+        height: auto;
+    }
+
+    .footerCol {
+        border-right: 0;
+    }
+
+    .logoFooter {
+        width: 350px;
+        margin: 20px;
+    }
+}
+
+@media all and (min-width: 761px) and (max-width: 991px) {
+    .footer {
+        height: auto;
+    }
+     
+    .logoFooter {
+        width: 360px;
+        margin: 20px;
+    }
+
+}
+
+@media all and (min-width: 992px) and (max-width: 1200px) {
+    .footerColDos {
+        width: 280px;
+    }
+
+    .logoFooter {
+        width: 330px;
+    }
+
+    .footerColTres {
+        width: 230px;
+    }
+}
+    
