--- a/src/components/views/Home.css
+++ b/src/components/views/Home.css
@@ -84,6 +84,7 @@
     border: 0px;
     border-radius: 25px 25px 25px 25px;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+    background-color: rgb(188, 189, 188);
 }
 
 .cardServ:hover {
