Agregué info a la pagina direcciones

--- a/src/components/views/Ministerio.css
+++ b/src/components/views/Ministerio.css
@@ -80,5 +80,5 @@
     height: 90px;
     background-color: rgb(111, 113, 114);
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
 }
