--- a/src/components/views/Home.css
+++ b/src/components/views/Home.css
@@ -1,23 +1,35 @@
 .portadaUno {
     background: url('../../img/ministro.jpeg') no-repeat center/cover;
     width: 100%;
-    height: 650px;
+    height: 630px;
 }
 
 .portadaDos {
     background: url('../../img/campaña.jpeg') no-repeat center/cover;
     width: 100%;
-    height: 700px;
+    height: 630px;
 }
 
 .portadaTres {
     background: url('../../img/campañaEnfer.jpeg') no-repeat center/cover;
     width: 100%;
-    height: 700px;
+    height: 630px;
 }
 
 .backG {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+.iconoRedes {
+    position: fixed;
+    top: 300px;
+    
+}
+
+.bgIconosRed {
+    background-color: rgba(0, 119, 255, 0.45);
+    padding: 20px;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .icono {
@@ -100,4 +112,41 @@
     object-fit: cover;
     border: 0px;
     border-radius: 25px 25px 0px 0px;
+}
+
+.youtubeVideo {
+    margin: 0;
+    padding: 6px, 6px, 6px, 6px;
+    border-style: solid;
+    border-width: 2px, 2px, 2px, 2px;
+    border-color: rgb(70, 141, 247);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+iframe {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    border: 0;
+    line-height: 1;
+    border: none;
+    box-sizing: border-box;
+}
+
+@media only screen and (max-width: 767px){
+    .iconoRedes {
+        display: none !important;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .iconosFooter {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 575px){
+    .cardTucSal {
+        margin: 50px;
+    }
 }
