--- a/src/components/views/Home.css
+++ b/src/components/views/Home.css
@@ -41,8 +41,7 @@
     width: 180px;
     height: 180px;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
-    margin-bottom: 30px;
-    
+    margin-bottom: 30px;    
 }
 
 .iconoBg:hover {
@@ -133,20 +132,33 @@ iframe {
     box-sizing: border-box;
 }
 
-@media only screen and (max-width: 767px){
+@media all and (max-width: 767px){
     .iconoRedes {
         display: none !important;
     }
 }
 
-@media only screen and (min-width:768px) {
+@media all and (min-width:768px) {
     .iconosFooter {
         display: none !important;
     }
 }
 
-@media only screen and (max-width: 575px){
+@media all and (max-width: 575px){
     .cardTucSal {
         margin: 50px;
     }
 }
+
+@media all and (max-width: 991px) {
+    iframe {
+        width: 100%;
+        height: 270px;
+    }
+  }
+
+  @media all and (min-width: 401px) and (max-width: 600px) {
+    iframe {
+        height: 240px;
+    }
+  }
