Agregué margin a cardSecret

--- a/src/components/views/Ministerio.css
+++ b/src/components/views/Ministerio.css
@@ -106,3 +106,9 @@
         margin: 30px;
     }
 }
+
+@media all and (min-width: 350px) and (max-width: 600px) {
+    .cardSecret {
+        margin: 15px;
+    }
+  }
